--- a/app/views/inbox/index.html.erb
+++ b/app/views/inbox/index.html.erb
@@ -34,22 +34,24 @@
         <th width=320>Message Text</th>
         <th align=center>Bounced?</th>
         <th align=center>Read?</th>
+        <th align=center>RSVP</th>
         <th align=center>Detail</th>
         </thead>
 
         <% @dists.each do |dist| %>
           <tr>
             <td><%= link_to(dist.message.author.short_name, member_path(dist.message.author)) %></td>
-            <td><%= dist.message.text %> <%= raw mark_as_read(dist, @member)%></td>
+            <td><%= dist.message.text_with_rsvp %> <%= raw mark_as_read(dist, @member)%></td>
             <td align=center>
               <%= raw yes_no_bounce dist.bounced %>
               </td>
             <td align=center>
               <%= raw yes_no_read dist.read %>
             </td>
+            <td align=center><%= raw dist.rsvp_display_link %></td>
             <td align=center>
-              <%= link_to("mail history", history_path(dist)) %> |
-              <%= link_to("message ##{dist.message.id}", message_path(dist.message)) %>
+              <%= link_to("history", history_path(dist)) %> |
+              <%= link_to("msg. ##{dist.message.id}", message_path(dist.message)) %>
             </td>
           </tr>
         <% end %>
@@ -58,7 +60,7 @@
 
     </div>
     <div id=x_footer style='font-size: 8pt;'>
-      If there are bounced messages, check the <b>mail history</b> to find out what is failing.
+      If there are bounced messages, check the <b>history</b> to find out what is failing.
     </div>
 
   </div>
