--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -27,6 +27,7 @@
           <th width=320>Message Text</th>
           <th>From</th>
           <th>Sent At</th>
+          <th align=center>RSVP</th>
           <th width=120 align=center>Sent | Bounced | Read</th>
         </tr>
         </thead>
@@ -34,9 +35,10 @@
         <% @messages.each do |m| %>
           <tr>
             <td><%= m.id %></td>
-            <td><%= link_to(m.text, message_path(m)) %></td>
+            <td><%= link_to(m.text_with_rsvp, message_path(m)) %></td>
             <td><%= link_to(m.author.short_name, member_path(m.author)) %><br/></td>
             <td><%= m.created_at.strftime("%m-%d %H:%M") %></td>
+            <td align=center><%= m.rsvp_stats %></td>
             <td align=center>
               <%= raw sent_display(m.distributions.count) %> |
               <%= raw bounce_display(m.distributions.bounced.count) %> |
