fixed missing rsvp label

--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -75,7 +75,7 @@
               <td style='font-size: 12px;'>
                 <b>Send SMS / eMail to selected members</b>
               </td>
-              <td align=right style='font-size: 10px;'>help</td>
+              <td align=right style='font-size: 10px;'><a href="http://wiki.bamru.net/index.php/Sending_Pages">help</a></td>
             </tr>
           </table>
           <table width=100%>
