--- a/app/views/history/show.html.erb
+++ b/app/views/history/show.html.erb
@@ -48,7 +48,7 @@
       <% end %>
       <% @journals.each do |journal| %>
         <hr>
-        Web Update #<%= journal.id %> by <b><%= journal.member.short_name %></b> at <%= created_time(journal) %> : <b><%= journal.action %></b><br/>
+        Web Update by <b><%= journal.member.short_name %></b> at <%= created_time(journal) %> : <b><%= journal.action %></b><br/>
       <% end %>
 
     </div>
