changed the HTML mail footer

--- a/app/views/notifier/process_email_message.html.erb
+++ b/app/views/notifier/process_email_message.html.erb
@@ -53,8 +53,8 @@ Mobile: <%= @opts['author_mobile'] %><br/>
 <hr>
 <% if @opts['prompt'].blank? %>
 Please reply to let others know you
-have read this message. Learn more at
-http://wiki.bamru.net/index.php/Paging
+have read this message. Learn more at the
+<a href="http://wiki.bamru.net/index.php/Paging">BAMRU Wiki</a>
 <% else %>
 Please RSVP!  Learn more at the
 <a href='http://wiki.bamru.net/index.php/RSVPs'>BAMRU Wiki</a>
