--- a/app/views/inbox/index.html.erb
+++ b/app/views/inbox/index.html.erb
@@ -62,7 +62,7 @@
     <div id=x_footer style='font-size: 8pt;'>
       <table width=100% style='font-size: 8pt;'>
         <tr>
-          <% if current_member == @member %>
+          <% if (current_member == @member) && (current_member.distributions.unread.count != 0) %>
             <td>
               <a href="#" id=mark_all>mark all as read</a>
             </td>
