updated marked as read logic

--- a/app/views/history/show.html.erb
+++ b/app/views/history/show.html.erb
@@ -37,7 +37,7 @@
           <td><%= @message.text_with_rsvp %></td>
         </tr>
         <tr>
-          <td align=right><b>RSVP:</b></td>
+          <td align=right><b>RSVP Response:</b></td>
           <td><%= rsvp_history_display(@distribution) %> <%= raw rsvp_link_helper(@distribution) %> </td>
         </tr>
       </table>
