fixed vtext problem

--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -85,7 +85,16 @@
 
     </div>
     <div id=x_footer style='font-size: 8pt;'>
-      If there are bounced messages, check the <b>history</b> to find out what is failing.
+      <table width=100% style='font-size: 8pt;'>
+        <tr>
+          <td>
+            <a href="#" id=clearsort>Clear Sort Settings</a>
+          </td>
+          <td align=right>
+            If there are bounced messages, check the <b>history</b> to find out what is failing.
+          </td>
+        </tr>
+      </table>
     </div>
 
   </div>
