updated character count rules

--- a/app/views/notifier/process_sms_message.text.erb
+++ b/app/views/notifier/process_sms_message.text.erb
@@ -1,1 +1,1 @@
-<%= @opts['text'] %> | Sent by <%= @opts['author_short_name'] %> <% unless @opts['prompt'].blank? %>| RSVP: <%= @opts['prompt'] %><% end %>
+<%= @opts['text'] %> (from <%= @opts['author_last_name']%>) <% unless @opts['prompt'].blank? %>RSVP <%= @opts['prompt'] %><% end %>
