--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -87,8 +87,9 @@
               <% if current_member.developer? %>
                 <table width=100%>
                   <tr>
-                    <td width=50% align=center><b><%= link_to "Mobile", '/home/mobile' %></b></td>
-                    <td width=50% align=center><b><%= link_to "Chat", '/chats' %></b></td>
+                    <td width=33% align=center><b><%= link_to "Mobile",  '/home/mobile' %></b></td>
+                    <td width=33% align=center><b><%= link_to "XMobile", '/home/xmobile' %></b></td>
+                    <td width=33% align=center><b><%= link_to "Chat",    '/chats' %></b></td>
                   </tr>
                 </table>
               <% end %>
