--- a/app/views/mobile/index.html.erb
+++ b/app/views/mobile/index.html.erb
@@ -1,8 +1,8 @@
 <div data-role="listview" data-inset="true" data-theme="c" data-dividertheme="f">
-  <li data-role="list-divider">Home</li>
-  <li><%= link_to "About", '/mobile/about' %></li>
-  <li><%= link_to "Members", mobile_members_path %></li>
-  <% if current_member.developer? %>
-    <li><%= link_to "Chat", mobile_chats_path %></li>
-  <% end %>
+  <li><%= link_to "Roster", mobile_members_path %></li>
+  <li><%= link_to "Paging", mobile_paging_path %></li>
+  <li><%= link_to "Message Log", mobile_messages_path %></li>
+  <li><%= link_to "My Inbox", mobile_inbox_path %></li>
+  <li><%= link_to "DO: Farrand", mobile_inbox_path %></li>
+  <li><%= link_to "Status Line", mobile_status_path %></li>
 </div>
