--- a/app/views/mobile/map.html.erb
+++ b/app/views/mobile/map.html.erb
@@ -1,6 +1,6 @@
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
 <%= javascript_include_tag "jquery.ui.map.js" %>
-<%= javascript_include_tag "mobile/mobile_map.js" %>
+<%= javascript_include_tag "mobile/mobile_map" %>
 
 You're at: <span id=coords>TBD...</span>
 
