added qr code to home#mobile

--- a/app/views/home/mobile.html.erb
+++ b/app/views/home/mobile.html.erb
@@ -4,8 +4,9 @@ Mobile pages are for smart phones and touch-screen devices.
 <p></p>
 BAMRU Mobile works on the newest Android, iPhone, iPad, and BlackBerry.
 <p></p>
-This technology is experimental and may not work 100%.
+The tools for building mobile web-apps are brand new.  Some devices may not work.
 Please report problems to Andy.
 <p></p>
 Visit <%= link_to mobile_url, mobile_path %> with your mobile browser and give it a try!
 <p></p>
+<%= image_tag("qrcode.png") %>
