--- a/app/views/layouts/mobile.html.erb
+++ b/app/views/layouts/mobile.html.erb
@@ -7,6 +7,7 @@
   <script src="http://code.jquery.com/jquery-1.6.2.min.js"></script>
   <%= javascript_include_tag "jquery_ujs.js" %>
   <script src="http://code.jquery.com/mobile/1.0b3/jquery.mobile-1.0b3.min.js"></script>
+  <%# <script src="http://ekel:8080/target/target-script-min.js"></script>  %>
   <meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1">
   <%# csrf_meta_tag %>
 </head>
