first launch of BAMRU Mobile

--- a/app/views/home/mobile.html.erb
+++ b/app/views/home/mobile.html.erb
@@ -1,12 +1,12 @@
 <h2>BAMRU Mobile</h2>
 <p></p>
-Mobile pages are for smart phones and touch-screen devices.
+BAMRU Mobile is for smart phones and touch-screen devices.  It is designed
+to work on Android, iPhone, iPad, and BlackBerry.
 <p></p>
-BAMRU Mobile works on the newest Android, iPhone, iPad, and BlackBerry.
+We need to build experience to understand how Mobile can work best for SAR.
 <p></p>
-The tools for building mobile web-apps are brand new.  Some devices may not work.
-Please report problems to Andy.
+Please use BAMRU Mobile frequently, and let Andy know if you spot problem or have ideas for enhancements.
 <p></p>
-Visit <%= link_to mobile_url, mobile_path %> with your mobile browser and give it a try!
+Visit <%= link_to mobile_url, mobile_path %> and give it a try!
 <p></p>
 <%= image_tag("qrcode.png") %>
