--- a/app/views/mobile/members/show.html.erb
+++ b/app/views/mobile/members/show.html.erb
@@ -1,15 +1,5 @@
-<b><%= @member.full_name %></b><br/>
-<%= @member.full_roles %><p></p>
-<%= raw @member.all_assoc %><p></p>
-<% unless @member.ham.blank? %>
-  <b>Ham:</b> <%= @member.ham %><br/>
-<% end %>
-<% unless @member.v9.blank? %>
-  <b>V9:</b> <%= @member.v9 %><p/>
-<% end %>
-<% if @member.photos.length > 0 %>
-  <b>Photos:</b><br/>
-  <% @member.photos.each do |pic| %>
-    <%= image_tag pic.image.url(:thumb) %>
-  <% end %>
-<% end %>
+<b><%= @member.full_name %></b> - 
+<%= @member.full_roles %>
+<%= raw display_phones(@member)   %>
+<%= raw display_emails(@member)   %>
+<%= raw display_photos(@member)   %>
