--- a/app/views/home/mobile.html.erb
+++ b/app/views/home/mobile.html.erb
@@ -1,12 +1,11 @@
 <h2>BAMRU Mobile</h2>
 <p></p>
-BAMRU Mobile is for smart phones and touch-screen devices.  It is designed
-to work on Android, iPhone, iPad, and BlackBerry.
+BAMRU Mobile is designed for Android, iPhone, iPad, and BlackBerry.
 <p></p>
 We need to build experience to understand how Mobile can work best for SAR.
 <p></p>
-Please use BAMRU Mobile frequently, and let Andy know if you spot problem or have ideas for enhancements.
+Visit <%= link_to mobile_url, mobile_path %> with your mobile browser, and give it a try!
 <p></p>
-Visit <%= link_to mobile_url, mobile_path %> and give it a try!
+Let Andy know if you spot problem or have ideas for enhancements.
 <p></p>
 <%= image_tag("qrcode.png") %>
