--- a/app/views/mobile/paging.html.erb
+++ b/app/views/mobile/paging.html.erb
@@ -1,35 +1,15 @@
 <%= javascript_include_tag "mobile/mobile_paging" %>
 
-<fieldset class="ui-grid-a">
-  <div class="ui-block-a">
-    <a href="#" id="select_link" data-role="button">Select</a>
-  </div>
-  <div class="ui-block-b">
-    <a href="#" id="send_link"  data-role="button">Send</a>
-  </div>
-</fieldset>
-
 <div id="select">
 
-  <div data-role="controlgroup" data-type="horizontal" data-role="fieldcontain" style='text-align: center;'>
-    <input type="checkbox" name="cktm" id="cktm" class="custom" />
-    <label for="cktm">TM</label>
-    <input type="checkbox" name="ckfm" id="ckfm" class="custom" />
-    <label for="ckfm">FM</label>
-    <input type="checkbox" name="cktx" id="cktx" class="custom" />
-    <label for="cktx">T</label>
-  </div>
+  <%= raw select_layout -%>
 
-  <div data-role="controlgroup" data-type="horizontal" data-role="fieldcontain" style='text-align: center;'>
-    <a href="#" data-role="button">Clear All</a>
-    <a href="#" data-role="button">Clear OOT</a>
-  </div>
-
-  <div  data-role="fieldcontain">
+  <div  data-role="fieldcontain" style='margin-top:-15px !important;'>
     <fieldset data-role="controlgroup">
+      
       <% @members.each do |mem| -%>
         <input type="checkbox" name="checkbox-<%= mem.id %>" id="checkbox-<%= mem.id %>" class="custom" />
-        <label for="checkbox-<%= mem.id %>"><%= "#{mem.typ} - #{mem.full_name}" %></label>
+        <label for="checkbox-<%= mem.id %>"><%= "#{mem.typ} - #{mem.full_name_do}" %></label>
       <% end %>
 
     </fieldset>
@@ -38,6 +18,9 @@
 </div>
 
 <div id="send">
-  this is send
+  Input Text:<br/>
+  <textarea rows=4 name="textarea" id="textarea"></textarea><br/>
+  RSVP <%= raw rsvp_mobile_select %>
+  <button class='ui-btn-hidden' type="submit">Send</button>
 </div>
 
