--- a/app/views/do_assignments/edit.html.erb
+++ b/app/views/do_assignments/edit.html.erb
@@ -18,8 +18,8 @@
       <%= edit_link_prev(@quarter) %> <%= edit_link_current_quarter %> <%= edit_link_next(@quarter) %><p/>
 
       <%= form_for @org, :method => :post, :url => do_assignments_path do |org| %>
-        <table align=center>
-          <tr><th>Year</th><th>Quarter</th><th>Week</th><th>Start - End</th><th>DO Name</th><th></th></tr>
+        <table align=center border=1>
+          <tr><th>Year</th><th>Quarter</th><th>Week</th><th>Start - End</th><th>Primary DO</th><th>Backup DO</th></tr>
           <% @org.do_assignments_for(@quarter[:year], @quarter[:quarter]).each do |ado| %>
             <%= org.fields_for :do_assignments, ado do |ido| %>
               <%= ido.hidden_field :year, :value => ado.year %>
@@ -29,12 +29,11 @@
                 <td><%= @quarter[:year] %></td><td><%= @quarter[:quarter] %></td>
                 <td><%= ado.week%></td>
                 <td><%= ado.start_day %> - <%= ado.end_day %></td>
-                <td><%= ido.select(:name, [ado.name] + ado.avail_members + ["<other name>"], {:include_blank => true}, {:class => 'namepick', :data_handle => "h_#{ado.id}"}) %></td>
                 <td>
-                  <span class="alt_name" id="<%= "h_#{ado.id}" %>">
-                    <input type="text" size=12>
-                    <button type="button" data_button=h_<%= ado.id %> class=xupdate>add</button>
-                   </span>
+                  <%= ido.select(:name, [ado.name] + ado.avail_members, {:include_blank => true}) %>
+                </td>
+                <td>
+                  <%= ido.select(:backup_id, ado.backup_hash, {:include_blank => true}) %>
                 </td>
               </tr>
             <% end %>
