--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,14 @@
   </div>
 
   <div id="footer">
-    <table align="center"><tr><td>Internal Use Only</td></tr></table>
+    <% cache("footer-table") do %>
+      <table width=100% style='padding-left: 30px; padding-right: 30px;'>
+        <tr>
+          <td align=left>Current DO: <%= raw do_assignment_display_name(DoAssignment.current.first) %></td>
+          <td align=right>Internal Use Only</td>
+        </tr>
+      </table>
+    <% end %>
   </div>
   <% if request.host.include?("ekel") %>
     <div class="debug"><%= raw debug_footer_text %></div>
