--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,8 +37,12 @@
     <% cache("footer-table") do %>
       <table width=100% style='padding-left: 30px; padding-right: 30px;'>
         <tr>
-          <td align=left>Current DO: <%= raw do_assignment_display_name(DoAssignment.current.first) %></td>
-          <td align=right>Internal Use Only</td>
+          <% if member_signed_in? %>
+            <td align=left>Current DO: <%= raw do_assignment_display_name(DoAssignment.current.first) %></td>
+            <td align=right>Internal Use Only</td>
+          <% else %>
+            <td align=center>Internal Use Only</td>
+          <% end %>
         </tr>
       </table>
     <% end %>
