--- a/app/views/mobile/paging.html.erb
+++ b/app/views/mobile/paging.html.erb
@@ -8,7 +8,7 @@
     <fieldset data-role="controlgroup">
       
       <% @members.each do |mem| -%>
-        <input type="checkbox" name="checkbox-<%= mem.id %>" id="checkbox-<%= mem.id %>" class="custom" />
+        <input type="checkbox" name="checkbox-<%= mem.id %>" id="checkbox-<%= mem.id %>" class="custom rck <%=mem.full_roles %> <%= mem.current_status %>" />
         <label for="checkbox-<%= mem.id %>"><%= "#{mem.typ} - #{mem.full_name_do}" %></label>
       <% end %>
 
@@ -23,4 +23,3 @@
   RSVP <%= raw rsvp_mobile_select %>
   <button class='ui-btn-hidden' type="submit">Send</button>
 </div>
-
