add mobile unit message log

--- a/app/views/home/mobile.html.erb
+++ b/app/views/home/mobile.html.erb
@@ -1,8 +1,8 @@
-<h2>BAMRU Mobile</h2>
+<h2>BAMRU Mobile ( BETA )</h2>
 <p></p>
 BAMRU Mobile is designed for Android, iPhone, iPad, and BlackBerry.
 <p></p>
-We need to build experience to understand how Mobile can work best for SAR.
+This is new.  We need to build experience to understand how Mobile can work best for SAR.
 <p></p>
 Visit <%= link_to mobile_url, mobile_path %> with your mobile browser, and give it a try!
 <p></p>
