--- a/app/views/mobile/paging.html.erb
+++ b/app/views/mobile/paging.html.erb
@@ -36,5 +36,5 @@
   </div>
   <%= raw rsvp_mobile_select %>
   <p></p>
-  <button class='ui-btn-hidden' type="submit">Send</button>
+  <button id=pgr_submit class='ui-btn-hidden' type="submit">Send to 0 members</button>
 </div>
