added mobile inbox

--- a/app/views/mobile/index.html.erb
+++ b/app/views/mobile/index.html.erb
@@ -1,10 +1,10 @@
-<div data-role="listview" data-inset="true" data-theme="c" data-dividertheme="f">
+<div data-role="listview" data-inset="true" data-theme="c">
   <li><%= link_to "Roster", mobile_members_path %></li>
   <li><%= link_to "DO: #{@do.last_name}", mobile_member_path(@do) %></li>
   <li><%= link_to "Status Line", mobile_status_path %></li>
   <li><%= link_to "Unit Message Log", mobile_messages_path %></li>
+  <li><%= link_to "My Inbox", mobile_inbox_path %></li>
   <% if current_member.developer? %>
     <li><%= link_to "Paging", mobile_paging_path %></li>
-    <li><%= link_to "My Inbox", mobile_inbox_path %></li>
   <% end %>
 </div>
