--- a/app/views/mobile/inbox.html.erb
+++ b/app/views/mobile/inbox.html.erb
@@ -1,1 +1,11 @@
-this is inbox.
+<% if current_member.distributions.unread.count != 0 %>
+<a href='/mobile/inbox?markall=true' data-role='button'>mark all as read</a>
+<% end %>
+
+<div data-role="listview" data-inset="true" data-theme="c">
+  <% @dists.each do |dist| %>
+    <li>
+      <%= raw inbox_helper(dist) %>
+    </li>
+  <% end %>
+</div>
