--- a/app/views/layouts/mobile.html.erb
+++ b/app/views/layouts/mobile.html.erb
@@ -8,7 +8,7 @@
   <%= javascript_include_tag "jquery_ujs.js" %>
   <script src="http://code.jquery.com/mobile/1.0b3/jquery.mobile-1.0b3.min.js"></script>
   <meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1">
-  <%# csrf_meta_tag %>
+  <%= csrf_meta_tag %>
 </head>
 <body>
 
