--- a/app/views/mobile/messages/show.html.erb
+++ b/app/views/mobile/messages/show.html.erb
@@ -19,7 +19,7 @@ you said: <%= raw response_helper(@message, @mydist) %>
   <tbody>
   <% @dists.each do |dist| %>
     <tr>
-      <td><%= dist.member.short_name %></td>
+      <td><%= dist.member.try(:short_name) %></td>
       <td><%= dist.read? ? "yes" : "no" %></td>
       <td><%= dist.rsvp_display_answer %></td>
     </tr>
