--- a/app/views/mobile/paging.html.erb
+++ b/app/views/mobile/paging.html.erb
@@ -1,40 +1,45 @@
 <%= javascript_include_tag "mobile/mobile_paging" %>
 <%= javascript_tag "var PREVIEW_OPTS = {name: '#{current_member.last_name}'};" %>
 
-<div id="select">
+<form action='/mobile/send_page' method='POST'>
 
-  <%= raw select_layout -%>
+  <div id="select">
 
-  <div  data-role="fieldcontain" style='margin-top:-15px !important;'>
-    <fieldset data-role="controlgroup">
-      
-      <% @members.each do |mem| -%>
-        <input type="checkbox" name="checkbox-<%= mem.id %>" id="checkbox-<%= mem.id %>" class="custom rck <%=mem.full_roles %> <%= mem.current_status %>" />
-        <label for="checkbox-<%= mem.id %>"><%= "#{mem.typ} - #{mem.full_name_do}" %></label>
-      <% end %>
+    <%= raw select_layout -%>
 
-    </fieldset>
+    <div  data-role="fieldcontain" style='margin-top:-15px !important;'>
+      <fieldset data-role="controlgroup">
+
+        <% @members.each do |mem| -%>
+          <input type="checkbox" name="targets[checkbox-<%= mem.id %>]" id="checkbox-<%= mem.id %>" class="custom rck <%=mem.full_roles %> <%= mem.current_status %>" />
+          <label for="checkbox-<%= mem.id %>"><%= "#{mem.typ} - #{mem.full_name_do}" %></label>
+        <% end %>
+
+      </fieldset>
+    </div>
+
   </div>
 
-</div>
+  <style>
+    .ui-select {
+      width: 100% !important;
+    }
+  </style>
 
-<style>
-  .ui-select {
-    width: 100% !important;
-  }
-</style>
+  <div id="send">
+    <div style='text-align: center;'>
+      <b>Message Text <span id='chars_remaining'></span></b>
+    </div>
+    <div class='ui-select' style="padding-right: 40px;">
+      <textarea rows=3 name="message[text]" id="textarea" style='width:100%; padding: 0px; border: 0px;'></textarea>
+    </div>
+    <div style='text-align: center; margin-top: 10px; margin-bottom: 0px; padding-bottom: 0px;'>
+      <b>RSVP</b>
+    </div>
+    <%= raw rsvp_mobile_select %>
+    <p></p>
+    <input type=hidden name='message[ip_address]' value='<%= @client_ip %>' />
+    <button id=pgr_submit class='ui-btn-hidden' type="submit">Send to 0 members</button>
+  </div>
 
-<div id="send">
-  <div style='text-align: center;'>
-    <b>Message Text <span id='chars_remaining'></span></b>
-  </div>
-  <div class='ui-select' style="padding-right: 40px;">
-    <textarea rows=3 name="textarea" id="textarea" style='width:100%; padding: 0px; border: 0px;'></textarea>
-  </div>
-  <div style='text-align: center; margin-top: 10px; margin-bottom: 0px; padding-bottom: 0px;'>
-    <b>RSVP</b>
-  </div>
-  <%= raw rsvp_mobile_select %>
-  <p></p>
-  <button id=pgr_submit class='ui-btn-hidden' type="submit">Send to 0 members</button>
-</div>
+</form>
